manifests/core/argocd/ocean/ingress.yaml
---
# See:
# - https://argo-cd.readthedocs.io/en/release-2.9/operator-manual/ingress/#option-2-ssl-termination-at-ingress-controller
# - https://kubernetes.github.io/ingress-nginx/user-guide/basic-usage/
#   We don't need `ingressClassName: nginx`. See: https://github.com/kubernetes-sigs/kubespray/blob/v2.23.0/roles/kubernetes-apps/ingress_controller/ingress_nginx/defaults/main.yml#L17
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-ingress
  namespace: argocd
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  rules:
    - http:
        paths:
          - path: /argocd # See: https://github.com/metalwhale/ocean/blob/main/kubernetes/custom/roles/argocd/tasks/main.yml
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  name: http
